hphp/hack/test/typecheck/is_expression/invalid_hint_class_with_generics.php.exp
File "invalid_hint_class_with_generics.php", line 9, characters 5-15:
  C<int>
File "invalid_hint_class_with_generics.php", line 6, characters 13-18:
Invalid "is" expression hint (Typing[4195])
  File "invalid_hint_class_with_generics.php", line 6, characters 13-18:
  The "is" operator cannot be used with a type with an erased generic type argument
